--- a/client/src/assets/scss/variables.scss
+++ b/client/src/assets/scss/variables.scss
@@ -24,5 +24,5 @@ $header-divider-background-color: #ebeefa;
 
 $post-list-divider-background-color: #d8dbe7;
 
-$writer-category-layout-background: $page-font-color;
-$writer-category-layout-color: #9caecf;
+$writer-category-layout-background: #3b4354;
+$writer-category-layout-color: #a8b5cb;
