--- a/blog-client/src/assets/scss/index.scss
+++ b/blog-client/src/assets/scss/index.scss
@@ -1,3 +1,4 @@
 @import "variables";
-@import '~element-ui/lib/theme-chalk/index.css';
+@import "~element-ui/lib/theme-chalk/index.css";
 @import "global";
+@import "element_ui.scss";
