--- a/blog-client/src/assets/scss/variables.scss
+++ b/blog-client/src/assets/scss/variables.scss
@@ -23,6 +23,7 @@ $page-font-color-dark: darken($page-font-color, 16%);
 $page-background-color: #FBFBFF;
 $text-color-primary: #1296db;
 $text-color-primary-dark: darken($text-color-primary, 8%);
+$color-danger: #ffaa2a;
 
 $header-divider-background-color: #ebeefa;
 
