--- a/blog-client/src/assets/scss/variables.scss
+++ b/blog-client/src/assets/scss/variables.scss
@@ -7,6 +7,7 @@ $page-font-size-sm: 0.85rem;
 $page-font-size: 15px;
 $page-font-size-lg: 16px;
 $header-height: 40px;
+$header-height-phone: 36px;
 $space-sm: 4px;
 $space: 8px;
 $space-lg: 16px;
@@ -14,6 +15,8 @@ $space-lg-x: 24px;
 
 $post-list-cover-width: 144px;
 $post-list-cover-height: 104px;
+$post-list-cover-width-phone: 120px;
+$post-list-cover-height-phone: 87px;
 
 $writer-category-list-layout-width: 250px;
 $writer-post-list-layout-width: 300px;
