--- a/app/views/layouts/footer.ejs
+++ b/app/views/layouts/footer.ejs
@@ -1,3 +1,3 @@
 <footer class="text-center text-hint">
-    <p>© 2022 powered by <a href="https://github.com/dongkuo/blog">blog</a>.</p>
+    <p>© 2022 powered by <a href="https://github.com/dongkuo/blog" target="_blank">blog</a>.</p>
 </footer>
