--- a/app/views/archive.ejs
+++ b/app/views/archive.ejs
@@ -16,7 +16,7 @@
                 <li>
                     <time><%= article.postDate %></time>
                     —
-                    <a class="link-primary" href="/article/<%= article.id %>"><%= article.title %></a>
+                    <a class="link-primary" href="/article/<%= article.id %>?category=<%= article.category %>"><%= article.title %></a>
                 </li>
             <% } %>
         </ul>
