--- a/app/views/article.ejs
+++ b/app/views/article.ejs
@@ -5,6 +5,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.4.0/styles/default.css">
     <title>Blog</title>
+    <style>
+        .title{
+            line-height: 1;
+        }
+    </style>
 </head>
 
 <body>
@@ -12,15 +17,15 @@
 <%- include('layouts/header.ejs') %>
 
 <main class="container">
-    <h1><%= article.title %><br><time class="text-hint"><%= article.postDateTime %></time></h1>
+    <h1 class="title"><%= article.title %><br>
+        <time class="text-hint"><%= article.postDateTime %></time>
+    </h1>
     <div class="article-content">
         <%- article.content %>
     </div>
     <p class="divider"><strong class="tip">End</strong></p>
 </main>
 
-<!--<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.4.0/build/highlight.min.js"></script>-->
-<!--<script>hljs.highlightAll();</script>-->
 <!-- footer -->
 <%- include('layouts/footer.ejs') %>
 </body>
