--- a/app/views/layouts/header.ejs
+++ b/app/views/layouts/header.ejs
@@ -2,8 +2,8 @@
     <div class="container">
         <img class="logo" src="/static/img/logo.jpg">
         <div class="nav-list">
-            <% for (let nav of navs){ %>
-                <a href="<%= nav.link || '/' + nav.id %>"><%= nav.name %></a>
+            <% for (let category of categories){ %>
+                <a href="<%= category.link || '/' + category.id %>" class="<%= activeCategory === category.id ? 'active' : '' %>"><%= category.name %></a>
             <% } %>
         </div>
     </div>
