--- a/views/layouts/about.ejs
+++ b/views/layouts/about.ejs
@@ -3,7 +3,7 @@
 <body>
 <% include header.ejs %>
 <main class="container about">
-  <figure><img src="/app/static/img/logo.jpg" title="梵高先生 —— 李志">
+  <figure><img src="/static/img/logo.jpg" title="梵高先生 —— 李志">
     <figcaption>梵高先生 —— 李志</figcaption>
   </figure>
   <p><strong>1.</strong></p>
