--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -4,3 +4,4 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/typo.css@2.1.2/typo.min.css">
 <link rel="stylesheet" href="/static/css/common.css">
 <link rel="stylesheet" href="/static/css/app.css">
+<link rel="shortcut icon" href="/static/img/favicon.ico" />
