--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -3,12 +3,12 @@
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
   <link rel="stylesheet" href="/static/css/common.css">
-  <script src="/app/static/lib/jquery-2.2.4.min.js"></script>
+  <script src="/static/lib/jquery-2.2.4.min.js"></script>
 </head>
 <body>
 <header>
   <div class="container">
-    <img class="logo" src="/app/static/img/logo.jpg">
+    <img class="logo" src="/static/img/logo.jpg">
     <h2 class="title">Sign in</h2>
   </div>
 </header>
