修复音乐组件问题

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -29,6 +29,7 @@
     container: document.getElementById('aplayer'),
     audio: [{
       name: '<%= music.name %>',
+      artist: '<%= music.artist %>',
       url: '<%= music.url %>',
       cover: '<%= music.cover %>',
       theme: '#d2a63c'
