修改网站标题

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>音乐</title>
+    <title><%= music.name %>-<%= music.artist %></title>
     <link rel="stylesheet" href="/static/css/common.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.css">
     <script src="https://cdn.jsdelivr.net/npm/aplayer@1.10.1/dist/APlayer.min.js"></script>
