--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <%- include('layouts/head.ejs') %>
-    <title>Blog</title>
+    <title>derker的博客</title>
 </head>
 <body>
 <!-- header -->
@@ -16,7 +16,8 @@
                 <li>
                     <time><%= article.postDate %></time>
                     —
-                    <a class="link-primary" href="/article/<%= article.id %>?category=<%= article.category %>"><%= article.title %></a>
+                    <a class="link-primary"
+                       href="/article/<%= article.id %>?category=<%= article.category %>"><%= article.title %></a>
                 </li>
             <% } %>
         </ul>
