--- a/static/css/common.css
+++ b/static/css/common.css
@@ -85,6 +85,11 @@ table {
     width: 100%;
 }
 
+p img {
+    width: 100%;
+    border-radius: 3px;
+}
+
 .container {
     max-width: 640px;
     margin-left: auto;
