--- a/views/article.ejs
+++ b/views/article.ejs
@@ -16,7 +16,7 @@
 <!-- header -->
 <%- include('layouts/header.ejs') %>
 
-<main class="container">
+<main class="container blog">
     <h1 class="title"><%= article.title %><br>
         <time class="text-hint"><%= article.postDateTime %></time>
     </h1>
