--- a/static/css/app.css
+++ b/static/css/app.css
@@ -156,8 +156,8 @@
 }
 
 .blog figure img {
-    width: 100%;
-    border-radius: 4px;
+    max-width: 100%;
+    border-radius: 3px;
 }
 
 .blog figure figcaption {
