接入公众号和百度统计

--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,4 +1,7 @@
 <footer class="text-center text-hint">
     <p>© 2022 powered by <a href="https://koajs.com/" target="_blank">Koa</a>.</p>
     <p><a class="text-hint" href="https://beian.miit.gov.cn/">鄂ICP备2022002273号</a></p>
+    <script src="//cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <%- include('mp.ejs') %>
+    <%- include('hm.ejs') %>
 </footer>
