接入公众号和百度统计

--- a/views/layouts/mp.ejs
+++ b/views/layouts/mp.ejs
@@ -19,7 +19,8 @@
             });
             wx.ready(function () {
                 let wxShare = typeof window.wxShare === 'undefined' ? defaultWxShare() : window.wxShare
-                wx.updateTimelineShareData(wxShare)
+              wx.updateAppMessageShareData(wxShare);
+              wx.updateTimelineShareData(wxShare);
             });
         })
         .catch(err => {
