接入公众号和百度统计

--- a/views/layouts/mp.ejs
+++ b/views/layouts/mp.ejs
@@ -26,10 +26,13 @@
           },
           cancel: function () {
           }
-        })
+        });
+
         wx.error(function (e) {
           window.alert('微信SDK加载出错:' + e)
         });
+
+        wx.showOptionMenu();
       });
 
       // wx.ready(function () {
