--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -3,4 +3,8 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
 <link rel="stylesheet" href="/static/css/common.css">
 <link rel="stylesheet" href="/static/css/app.css">
-<link rel="shortcut icon" href="/static/img/favicon.ico" />
+<link rel="shortcut icon" href="/static/img/favicon.ico"/>
+<!--Noto Serif Simplified Chinese -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap" rel="stylesheet">
