--- a/static/css/common.css
+++ b/static/css/common.css
@@ -9,7 +9,7 @@ body, button, input, select, textarea {
 html, body {
     color: #48412a;
     background: #FFFFF8;
-    font-family: "source-han-serif-sc", "SimSun", "\5B8B\4F53", charter, Georgia, Cambria, 'Times New Roman', Times, serif;
+    font-family: 'Noto Serif SC', 'source-han-serif-sc', "SimSun", "\5B8B\4F53", charter, Georgia, Cambria, 'Times New Roman', Times, serif;
     line-height: 1.8;
     font-size: 18px;
     padding: 0;
