--- a/static/css/common.css
+++ b/static/css/common.css
@@ -14,6 +14,7 @@ html, body {
     font-size: 18px;
     padding: 0;
     margin: 0;
+    letter-spacing: 2px;
 }
 
 ul, ol {
@@ -314,6 +315,10 @@ header .nav-list .active {
 }
 
 @media screen and (max-width: 720px) {
+
+    html, body {
+        font-size: 20px;
+    }
 
     header .container {
         padding: 8px;
