--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,8 +1,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"/>
-<link rel="stylesheet" href="/static/css/common.css">
-<link rel="stylesheet" href="/static/css/app.css">
+<link rel="stylesheet" href="/static/css/common.css?23923792387">
+<link rel="stylesheet" href="/static/css/app.css?23923792387">
 <link rel="shortcut icon" href="/static/img/favicon.ico"/>
 <!--Noto Serif Simplified Chinese -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
