修改网站标题

--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <%- include('layouts/head.ejs') %>
-    <title>derker的博客</title>
+    <title>编程与写作</title>
 </head>
 <body>
 <!-- header -->
