--- a/views/article.ejs
+++ b/views/article.ejs
@@ -4,7 +4,7 @@
     <%- include('layouts/head.ejs') %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.4.0/styles/default.css">
-    <title><%= article.title %> - derker的博客</title>
+    <title><%= article.title %> - 编程与写作</title>
 </head>
 
 <body>
